python-django-openstack-auth (2.3.0-2) experimental; urgency=medium

  * Fix FTBFS with Django 1.10 (Closes: #828670).

 -- Thomas Goirand <zigo@debian.org>  Tue, 19 Jul 2016 07:28:10 +0000

python-django-openstack-auth (2.3.0-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 now (no change)
  * d/rules: Changed UPSTREAM_GIT protocol to https

  [ Corey Bryant ]
  * New upstream release.
  * d/gbp.conf: Update branch for Newton.
  * d/control: Align (Build-)Depends with upstream.

  [ Thomas Goirand ]
  * Add Corey Bryant <corey.bryant@canonical.com> to uploaders.

 -- Thomas Goirand <zigo@debian.org>  Tue, 14 Jun 2016 15:37:45 +0000

python-django-openstack-auth (2.2.1-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * Fixed homepage (https).
  * Fixed VCS URLs (https).

  [ Thomas Goirand ]
  * New upstream release.
  * Uploading to unstable.
  * Standards-Version: 3.9.7 (no change).
  * Removed debian/patches/fix-request.REQUEST-non-existant.patch applied
    upstream.
  * Removed fix-check-of-redirections.patch also applied upstream.
  * Removed Monkey-patch_to_avoid_breaking_Django_with_hash_user.id.patch as
    a better solution was implemented.

 -- Thomas Goirand <zigo@debian.org>  Wed, 06 Apr 2016 08:50:17 +0000

python-django-openstack-auth (2.1.1-1) experimental; urgency=medium

  [ Ivan Udovichenko ]
  * New upstream release.
  * d/control: Fixed (build-)depends for this release.

  [ Thomas Goirand ]
  * Fixed debian/copyright ordering.
  * Re-applied Django 1.9 and REQUEST patches.

 -- Thomas Goirand <zigo@debian.org>  Thu, 21 Jan 2016 07:45:26 +0000

python-django-openstack-auth (2.0.1-1) unstable; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 10 Dec 2015 00:48:05 +0100

python-django-openstack-auth (2.0.0-3) unstable; urgency=medium

  * Transition from python-openstack-auth to python-django-openstack-auth.
  * Added Python 3 support.